# vllm-tuner

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
configs/: balanced_gpu.yaml  high_throughput_gpu.yaml  high_throughput_tpu.yaml  low_latency_gpu.yaml  multi_gpu.yaml  test_cpu.yaml
configs/benchmark/: guidellm.yaml  http.yaml  vllm_benchmark.yaml
configs/execution/: local.yaml  ray.yaml
configs/hardware/: gpu.yaml  tpu.yaml
configs/optimization/: balanced.yaml  cost_optimized.yaml  high_throughput.yaml  low_latency.yaml
src/vllm_tuner/: __init__.py  settings.py
src/vllm_tuner/baseline/: __init__.py  runner.py
src/vllm_tuner/benchmarks/: __init__.py  base.py  guidellm.py  http_client.py  vllm_benchmark.py
src/vllm_tuner/cli/: main.py  rich_ui.py
src/vllm_tuner/core/: __init__.py  models.py  optimizer.py  study_controller.py  trial.py
src/vllm_tuner/execution/: __init__.py  base.py  local.py  ray_backend.py
src/vllm_tuner/hardware/: __init__.py  base.py  null.py  nvml.py  tpu.py
src/vllm_tuner/helper/display/: __init__.py
src/vllm_tuner/helper/logging/: __init__.py
src/vllm_tuner/reporting/: __init__.py  cost_analysis.py  dashboard.py  export.py  html.py  live_dashboard.py
src/vllm_tuner/storage/: __init__.py  base.py  postgresql.py  sqlite.py
src/vllm_tuner/utils/: __init__.py  cloud_pricing.py  model_analyzer.py  model_registry.py
src/vllm_tuner/vllm/: __init__.py  launcher.py  telemetry.py
tests/: conftest.py
tests/integration/: test_smoke_local.py
tests/unit/: test_baseline.py  test_benchmarks.py  test_core.py  test_display.py  test_execution.py  test_hardware.py  test_model_analyzer.py  test_model_registry.py  test_models.py  test_reporting.py  test_storage.py  test_utils.py  test_vllm.py
